# bilaboard

./: .gitignore  README.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
bilaapp/: apps.py  models.py  urls.py  views.py
bilaapp/migrations/: 0001_initial.py  0002_rename_participants_group_players_match_group.py  0003_alter_match_datetime.py  0004_alter_group_players_alter_result_user_delete_user.py
bilaapp/templates/bilaapp/: addplayer.html  creategroup.html  creatematch.html  dashboard.html  groupdetail.html  register.html  signin.html  signup.html
bilaboard/: asgi.py  settings.py  urls.py  wsgi.py
middleware/: share_routes.py
static/src/: main.js
static/src/Layouts/: AppLayout.vue
static/src/Pages/: Dashboard.vue
static/src/Pages/Auth/: Signin.vue  Signup.vue
static/src/Pages/Group/: Show.vue
static/src/Pages/Match/: Create.vue  Show.vue
static/src/Pages/Player/: Create.vue
static/src/plugins/: buildUrl.js  getRoutes.js
templates/: base.html
utilities/: get_routes.py
