[tool.poetry]
name = "bilaboard"
version = "0.1.0"
description = ""
authors = ["Gabriel Cardoso <cardosogabn@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
inertia-django = "^0.5.3"
django-vite = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
